--- a/index.html
+++ b/index.html
@@ -4,88 +4,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CashFlow - Income & Expense Tracker</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <title>Money Flow</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-        integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <div class="background-globes">
-        <div class="globe globe-1"></div>
-        <div class="globe globe-2"></div>
-        <div class="globe globe-3"></div>
-    </div>
-
-    <div class="container">
-        <header>
-            <h1>CashFlow</h1>
-            <p>Master your finances</p>
-        </header>
-
-        <div class="dashboard-container">
-            <div class="balance-card">
-                <h2>Balance</h2>
-                <h1 id="balance">Rs 0.00</h1>
-            </div>
-
-            <div class="inc-exp-container">
-                <div class="money-card income">
-                    <h4>Income</h4>
-                    <p id="money-plus" class="money plus">+Rs 0.00</p>
-                </div>
-                <div class="money-card expense">
-                    <h4>Expense</h4>
-                    <p id="money-minus" class="money minus">-Rs 0.00</p>
-                </div>
-            </div>
+    <header>
+        <h1>Money Flow</h1>
+        <div class="net-balance">
+            <h2>Balance</h2>
+            <h1 id="balance">₹0.00</h1>
         </div>
+    </header>
 
-        <div class="content-grid">
-            <div class="add-transaction-section">
-                <h3>Add New Transaction</h3>
-                <form id="form">
-                    <div class="form-control">
-                        <label for="text">Description</label>
-                        <input type="text" id="text" placeholder="Enter text..." />
+    <main class="container">
+        <!-- Input Section -->
+        <section class="form-container">
+            <form id="form">
+                <div class="form-control">
+                    <label>Description</label>
+                    <input type="text" id="text" placeholder="Enter text..." />
+                    <small class="error-msg"></small>
+                </div>
+                <div class="form-control">
+                    <label>Amount</label>
+                    <input type="number" id="amount" placeholder="Enter amount..." step="0.01" />
+                    <small class="error-msg"></small>
+                </div>
+                <div class="form-control">
+                    <label>Source</label>
+                    <select id="source">
+                        <option value="bank">Bank</option>
+                        <option value="card">Credit Card</option>
+                        <option value="cash">Cash</option>
+                    </select>
+                </div>
+                <div class="form-control">
+                    <label>Type</label>
+                    <div class="toggle-container">
+                        <span class="toggle-label income">Income</span>
+                        <label class="switch">
+                            <input type="checkbox" id="type-toggle">
+                            <span class="slider"></span>
+                        </label>
+                        <span class="toggle-label expense">Expense</span>
                     </div>
+                </div>
+                <div class="form-control">
+                    <label>Date</label>
+                    <input type="date" id="date" />
+                </div>
+                <button class="btn">Add Transaction</button>
+            </form>
+        </section>
 
-                    <div class="form-control">
-                        <label for="amount">Amount</label>
-                        <input type="number" id="amount" placeholder="Enter amount..." />
+        <!-- Summary & List Section -->
+        <div class="right-column">
+            <section class="summary-container">
+                <div class="grand-total-section">
+                    <h4>Grand Total Income</h4>
+                    <p id="money-plus" class="money plus">+₹0.00</p>
+                    <h4>Grand Total Expense</h4>
+                    <p id="money-minus" class="money minus">-₹0.00</p>
+                </div>
+
+                <h3>Breakdown by Source</h3>
+                <div class="source-breakdown">
+                    <div class="source-card">
+                        <h5>Bank</h5>
+                        <p class="money plus" id="bank-inc">+₹0.00</p>
+                        <p class="money minus" id="bank-exp">-₹0.00</p>
                     </div>
-
-                    <div class="form-control toggle-control">
-                        <label>Transaction Type</label>
-                        <div class="toggle-switch">
-                            <input type="radio" id="type-income" name="type" value="income" checked>
-                            <label for="type-income" class="toggle-label income-label">Income</label>
-
-                            <input type="radio" id="type-expense" name="type" value="expense">
-                            <label for="type-expense" class="toggle-label expense-label">Expense</label>
-
-                            <div class="toggle-slider"></div>
-                        </div>
+                    <div class="source-card">
+                        <h5>Credit Card</h5>
+                        <p class="money plus" id="card-inc">+₹0.00</p>
+                        <p class="money minus" id="card-exp">-₹0.00</p>
                     </div>
+                    <div class="source-card">
+                        <h5>Cash</h5>
+                        <p class="money plus" id="cash-inc">+₹0.00</p>
+                        <p class="money minus" id="cash-exp">-₹0.00</p>
+                    </div>
+                </div>
 
-                    <button class="btn">Add Transaction</button>
-                </form>
-            </div>
+                <button id="toggle-history-btn" class="btn history-btn">Show History</button>
+            </section>
 
-            <div class="history-section">
+            <section class="transactions-container">
                 <h3>History</h3>
-                <button id="toggle-history-btn" class="btn-toggle">Show History</button>
-                <ul id="list" class="list hidden">
+                <ul id="list" class="list">
                     <!-- Transactions will be added here dynamically -->
-                    <!-- Example item: <li class="minus">Cash <span>-$400</span><button class="delete-btn">x</button></li> -->
                 </ul>
-            </div>
+            </section>
         </div>
-    </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
